# swagger.yml
@@ -8,6 +8,21 @@ tags:
   - name: utility payments
     description: Operaciones de pago de cuenta
 paths:
+  /utility-payments/v1/categories:
+    get:
+      tags: 
+        - utility payments
+      summary: Obtiene las categorías de los convenios pagos de cuenta
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Category'
+
   /utility-payments/v1/utilities:
     get:
       tags: 
@@ -158,6 +173,15 @@ components:
           items:
             type: string
           example: ["RUT", "CON DIGITO VERIFICADOR"]
+    Category:
+      type: object
+      properties:
+        id:
+          type: string
+          example: 100
+        name:
+          type: string
+          example: AGUA
     UtilityPaymentRequest:
       type: object
       properties:
